# zones

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .vercelignore  CNAME  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.chef  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  Zones_DIFFERENTIAL_REVIEW_2026-02-05.md  demo-blacklist-output.txt  deny.toml  docker-bake-profiling.hcl  docker-bake.hcl  flake.nix  pr-description.md  rollup-spec.md  tempo-validium-spec.md  tempo-validium-zone-design.md  tempo.nu  typos.toml
crates/alloy/: Cargo.toml
crates/alloy/src/: network.rs
crates/alloy/src/fillers/: mod.rs  nonce.rs
crates/alloy/src/provider/: ext.rs
crates/alloy/src/rpc/: compat.rs  request.rs
crates/commonware-node-config/: Cargo.toml
crates/commonware-node-config/src/: lib.rs  tests.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/dkg-onchain-artifacts/: Cargo.toml
crates/dkg-onchain-artifacts/src/: lib.rs
crates/precompiles/: Cargo.toml
crates/precompiles/benches/: tempo_precompiles.rs
crates/precompiles/src/: abi.rs  aes_gcm.rs  chaum_pedersen.rs  ecies.rs  error.rs  lib.rs  policy.rs  test_utils.rs  tip20_factory.rs  tip403_proxy.rs  ztip20.rs
crates/precompiles/src/account_keychain/: mod.rs
crates/precompiles/src/nonce/: mod.rs
crates/precompiles/src/stablecoin_dex/: dispatch.rs  mod.rs  orderbook.rs
crates/precompiles/src/storage/: evm.rs  thread_local.rs
crates/precompiles/src/tip20/: dispatch.rs  mod.rs
crates/precompiles/src/tip20_factory/: mod.rs
crates/precompiles/src/tip403_registry/: dispatch.rs  mod.rs
crates/precompiles/src/tip_fee_manager/: amm.rs  mod.rs
crates/precompiles/src/validator_config/: dispatch.rs  mod.rs
crates/precompiles/src/verifier/: dispatch.rs  mod.rs
crates/precompiles/tests/storage_tests/: mod.rs  sets.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: abi.rs  constants.rs  header.rs  lib.rs  policy.rs
crates/primitives/src/transaction/: envelope.rs  mod.rs  tempo_transaction.rs  tt_authorization.rs  tt_signature.rs
crates/pz-exex/: Cargo.toml
crates/pz-exex/src/: block_builder.rs  builder.rs  db.rs  deposit.rs  error.rs  execution.rs  exex.rs  lib.rs  node.rs  portal.rs  processor.rs  root.rs  state.rs  storage.rs  types.rs
crates/revm/: Cargo.toml
crates/revm/src/: block.rs  common.rs  error.rs  evm.rs  gas_params.rs  handler.rs  lib.rs  tx.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: config.rs  error.rs  filter.rs  handlers.rs  lib.rs  metrics.rs  policy.rs  provider.rs  proxy.rs  server.rs  subscription.rs  types.rs  ws.rs
crates/rpc/src/auth/: mod.rs  token.rs  verify.rs
crates/rpc/test-utils/: auth_tokens.rs
crates/rpc/tests/: metrics.rs
crates/rpc/tests/it/: ws.rs
crates/tempo-zone/: ARCHITECTURE.md  Cargo.toml  README.md
crates/tempo-zone-exex/: Cargo.toml  README.md
crates/tempo-zone-exex/src/: batcher.rs  block_builder.rs  builder.rs  db.rs  deposit_tracker.rs  events.rs  execution.rs  exex.rs  lib.rs  node.rs  portal.rs  processor.rs  prover.rs  submitter.rs  types.rs
crates/tempo-zone-exex/tests/: integration.rs
crates/tempo-zone-sp1-guest/: Cargo.toml  README.md
crates/tempo-zone-sp1-guest/.cargo/: config.toml
crates/tempo-zone-sp1-guest/src/: deposit_hash.rs  main.rs  state.rs  types.rs  withdrawal_hash.rs
crates/tempo-zone/src/: abi.rs  batch.rs  bindings.rs  builder.rs  cli.rs  engine.rs  evm.rs  executor.rs  ext.rs  l1.rs  lib.rs  metrics.rs  node.rs  nonce_keys.rs  observability.rs  payload.rs  pool.rs  proof.rs  prover.rs  rpc.rs  system_tx.rs  tee.rs  tx_context.rs  withdrawals.rs  witness_rpc.rs  zone_monitor_metrics.rs  zonemonitor.rs
crates/tempo-zone/src/l1/: deposits.rs  mod.rs  queue.rs  subscriber.rs
crates/tempo-zone/src/l1_state/: cache.rs  listener.rs  mod.rs  policy_cache.rs  policy_listener.rs  precompile.rs  provider.rs  versioned.rs
crates/tempo-zone/src/precompiles/: aes_gcm.rs  chaum_pedersen.rs  ecies.rs  mod.rs  test_utils.rs  tip20_factory.rs  tip403_proxy.rs  ztip20.rs
crates/tempo-zone/src/rpc/: api.rs  filter.rs  handlers.rs  mod.rs  provider.rs  server.rs  types.rs
crates/tempo-zone/tests/: advance_tempo.rs  l1_state_reader.rs  witness_pipeline.rs
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/src/: amm.rs  best.rs  lib.rs  maintain.rs  metrics.rs  paused.rs  tempo_pool.rs  test_utils.rs  transaction.rs  tt_2d_pool.rs  validator.rs
crates/zone-prover/: ARCHITECTURE.md  Cargo.toml
crates/zone-prover-sp1-program/: Cargo.toml
crates/zone-prover-sp1-program/examples/: latest_request_status.rs  request_status.rs
crates/zone-prover-sp1-program/program/: Cargo.toml
crates/zone-prover-sp1-program/src/: lib.rs
crates/zone-prover-sp1-program/tests/: tip20_e2e_bench.rs
crates/zone-prover/src/: ancestry.rs  db.rs  execute.rs  lib.rs  mpt.rs  prover.rs  sparse_mpt.rs  tempo.rs  testutil.rs  types.rs  witness.rs
crates/zone-prover/tests/: e2e_prove.rs  e2e_real_contracts.rs
crates/zone-sp1-program/program/: Cargo.toml
crates/zone-stf/: Cargo.toml
crates/zone-stf/src/: db.rs  execute.rs  header.rs  lib.rs  mpt.rs  sparse_mpt.rs  tempo.rs  testutil.rs  types.rs
crates/zone-stf/tests/: e2e_prove.rs  e2e_real_contracts.rs
crates/zone-test-utils/: Cargo.toml
crates/zone-test-utils/src/: lib.rs
examples/: Cargo.toml  README.md
examples/assets/: handoff-sequence-flow.mmd  handoff-what-runs-where.mmd
examples/src/: chain.rs  crypto.rs  demo.rs  lib.rs  main.rs  model.rs  server.rs  state.rs
examples/tests/: crypto.rs
programs/zone-batch/: Cargo.toml
programs/zone-batch/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: bridge_utils.rs  build_encrypted_deposit_payload.rs  create_zone.rs  demo_blacklist.rs  demo_swap_and_deposit.rs  deploy_router.rs  encrypted_deposit.rs  generate_devnet.rs  generate_genesis.rs  generate_localnet.rs  generate_zone_genesis.rs  genesis_args.rs  get_dkg_outcome.rs  main.rs  send_routed_withdrawal.rs  set_encryption_key.rs  spam_deposits.rs  zone_info.rs  zone_utils.rs
(+1087 files in other folders)
