[workspace.package]
version = "1.0.0-rc.5"
edition = "2024"
rust-version = "1.91.0"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
members = [
  "bin/tempo-zone",
  "crates/tempo-zone",
  "xtask",
]

# Resolver 3 is available with edition 2024
resolver = "3"

[workspace.lints]
[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
default-constructed-unit-structs = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
incremental = true

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# tempo (from upstream)
tempo-alloy = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4" }
tempo-chainspec = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-commonware-node-config = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-consensus = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-contracts = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-dkg-onchain-artifacts = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-evm = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-node = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4" }
tempo-payload-types = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-precompiles = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false, features = [
  "reth",
  "serde",
  "serde-bincode-compat",
  "reth-codec",
] }
tempo-revm = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }
tempo-transaction-pool = { git = "https://github.com/tempoxyz/tempo", tag = "v1.1.4", default-features = false }

# reth
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120", features = [
  "std",
  "optional-checks",
] }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "c59a120" }
revm = { version = "34.0.0", features = ["optional_fee_charge"] }

# alloy
alloy = { version = "1.6.1", default-features = false }
alloy-consensus = { version = "1.6.1", default-features = false }
alloy-contract = { version = "1.6.1", default-features = false }
alloy-eips = { version = "1.6.1", default-features = false }
alloy-evm = "0.26.4"
alloy-network = { version = "1.6.1", default-features = false }
alloy-primitives = { version = "1.5.4", default-features = false }
alloy-provider = { version = "1.6.1", default-features = false }
alloy-rlp = "0.3.13"
alloy-rpc-types-engine = "1.6.1"
alloy-rpc-types-eth = { version = "1.6.1" }
alloy-signer-local = "1.6.1"
alloy-sol-types = "1.5.4"
alloy-transport = "1.6.1"

# commonware
commonware-codec = "2026.2.0"
commonware-consensus = "2026.2.0"
commonware-cryptography = "2026.2.0"
commonware-math = "2026.2.0"
commonware-utils = "2026.2.0"

# misc
clap = { version = "4.5.45", features = ["derive"] }
const-hex = { version = "1.15.0" }
derive_more = { version = "2.0.0" }
eyre = "0.6.12"
futures = "0.3.31"
indicatif = "0.18"
itertools = "0.14.0"
parking_lot = "0.12.4"
rand = "0.8.5"
rayon = "1.10"
secp256k1 = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"


