[package]
name = "tempo-xtask"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-alloy.workspace = true
tempo-chainspec.workspace = true
tempo-contracts.workspace = true
tempo-commonware-node-config.workspace = true
tempo-dkg-onchain-artifacts.workspace = true
tempo-evm.workspace = true
tempo-precompiles.workspace = true
tempo-primitives.workspace = true
tempo-revm.workspace = true

alloy = { workspace = true, features = [
  "contract",
  "genesis",
  "providers",
  "reqwest",
  "reqwest-rustls-tls",
  "signers",
  "signer-local",
  "signer-mnemonic",
  "rand",
  "sol-types",
  "getrandom",
] }
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
clap = { version = "4.5.45", features = ["derive"] }
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-math.workspace = true
commonware-utils.workspace = true
const-hex.workspace = true
eyre.workspace = true
indicatif = { workspace = true, features = ["rayon"] }
itertools.workspace = true
rand.workspace = true
rayon.workspace = true
reth-evm.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
secp256k1 = { workspace = true, features = ["rand"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
