[package]
name = "tempo-xtask"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-alloy.workspace = true
tempo-chainspec.workspace = true
tempo-contracts.workspace = true
tempo-evm.workspace = true
tempo-precompiles.workspace = true
tempo-revm.workspace = true

alloy = { workspace = true, features = [
  "contract",
  "genesis",
  "providers",
  "reqwest",
  "reqwest-rustls-tls",
  "signers",
  "signer-local",
  "signer-mnemonic",
  "sol-types",
] }
alloy-rlp.workspace = true
clap = { version = "4.5.45", features = ["derive"] }
const-hex.workspace = true
eyre.workspace = true
reth-evm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
