[package]
name = "tempo-xtask"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-alloy.workspace = true
tempo-chainspec.workspace = true
zone = { path = "../crates/tempo-zone" }
tempo-contracts.workspace = true
tempo-evm.workspace = true
tempo-precompiles.workspace = true
tempo-primitives.workspace = true
tempo-revm.workspace = true

alloy = { workspace = true, features = [
  "contract",
  "genesis",
  "providers",
  "provider-ws",
  "reqwest",
  "reqwest-rustls-tls",
  "rpc-types",
  "signers",
  "signer-local",
  "signer-mnemonic",
  "sol-types",
] }
alloy-eips.workspace = true
alloy-rlp.workspace = true
clap = { version = "4.5.45", features = ["derive", "env"] }
const-hex.workspace = true
eyre.workspace = true
futures.workspace = true
rand.workspace = true
reth-evm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

rustls = { version = "0.23", features = ["aws-lc-rs"] }

# crypto (for encryption key registration)
k256.workspace = true
