[package]
name = "tempo-alloy"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-contracts = { workspace = true, features = ["rpc"] }
tempo-primitives = { workspace = true, features = ["serde"] }
tempo-evm = { workspace = true, optional = true }
tempo-revm = { workspace = true, optional = true }

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-transport.workspace = true

reth-evm = { workspace = true, optional = true }
reth-primitives-traits = { workspace = true, optional = true }
reth-rpc-convert = { workspace = true, optional = true }
reth-rpc-eth-types = { workspace = true, optional = true }

derive_more.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["providers", "rpc-types-eth", "sol-types"] }
eyre.workspace = true
futures.workspace = true
test-case.workspace = true
tokio.workspace = true

[features]
default = []
asm-keccak = [
    "alloy-primitives/asm-keccak",
    "alloy/asm-keccak",
]
tempo-compat = [
    "dep:reth-evm",
    "dep:reth-rpc-convert",
    "dep:reth-primitives-traits",
    "dep:reth-rpc-eth-types",
    "dep:tempo-evm",
    "dep:tempo-revm",
    "tempo-primitives/rpc",
]
