[package]
name = "tempo-commonware-node-config"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
commonware-codec.workspace = true
commonware-cryptography.workspace = true
const-hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
commonware-utils.workspace = true
rand_08.workspace = true
