[package]
name = "tempo-dkg-onchain-artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-utils.workspace = true
modular-bitfield = { version = "0.11.2", optional = true }

[dev-dependencies]
commonware-math.workspace = true
rand_08.workspace = true

[lints]
workspace = true
