[package]
name = "tempo-precompiles"
description = "TODO:"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-contracts.workspace = true
tempo-chainspec.workspace = true
tempo-precompiles-macros.workspace = true
alloy = { workspace = true, features = ["sol-types", "consensus"] }
alloy-evm.workspace = true
revm.workspace = true

tracing.workspace = true
thiserror.workspace = true
derive_more.workspace = true
scoped-tls = "1.0"

[dev-dependencies]
criterion.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
eyre.workspace = true
rand_08.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempo-evm.workspace = true

[features]
default = ["rpc"]
test-utils = ["alloy/getrandom"]
rpc = ["tempo-contracts/rpc"]

[[test]]
name = "storage"
required-features = ["test-utils"]

[[bench]]
name = "tempo_precompiles"
harness = false
required-features = ["test-utils"]
