[package]
name = "zone-precompiles"
description = "Zone-specific precompile implementations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# zones
zone-primitives = { workspace = true, default-features = false }

# tempo (workspace deps already have default-features = false)
tempo-chainspec = { workspace = true, default-features = false }
tempo-contracts = { workspace = true, default-features = false }
tempo-precompiles = { workspace = true, default-features = false }
tempo-precompiles-macros.workspace = true

# alloy
alloy = { workspace = true, default-features = false }
alloy-evm = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false }
alloy-sol-types = { workspace = true, default-features = false }

# revm
revm = { workspace = true, default-features = false }

# crypto
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic", "ecdh"] }
sha2 = { version = "0.10.9", default-features = false }
rand = { version = "0.9.4", default-features = false }

# misc
tracing = { version = "0.1.41", default-features = false }

[dev-dependencies]
const-hex.workspace = true
tempo-precompiles = { workspace = true, features = ["test-utils"] }

[features]
default = ["std"]
test-utils = ["tempo-precompiles/test-utils"]
std = [
    "zone-primitives/std",
    "alloy-evm/std",
    "alloy-primitives/std",
    "alloy-sol-types/std",
    "revm/std",
    "aes-gcm/std",
    "k256/std",
    "sha2/std",
    "rand/std",
    "tracing/std",
]
