[package]
name = "zone-primitives"
description = "Primitive types used by the zone"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives = { version = "1.5.4", default-features = false }
alloy-rlp = { version = "0.3.13", default-features = false }
alloy-sol-types = { version = "1.5.7", default-features = false }
alloy-contract = { version = "1.6.1", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
const-hex = "1.15.0"

[features]
default = ["std", "serde", "rpc"]
std = [
    "alloy-primitives/std",
    "alloy-rlp/std",
    "alloy-sol-types/std",
    "serde?/std",
]
serde = ["dep:serde", "alloy-primitives/serde"]
rpc = ["dep:alloy-contract"]
