[package]
name = "pz-exex"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# reth - using minimal set for ExEx
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-tracing.workspace = true
reth-primitives-traits.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-consensus.workspace = true

# async
tokio.workspace = true
futures = "0.3"

# database
rusqlite = { version = "0.32", features = ["bundled"] }

# misc
eyre.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
