[package]
name = "tempo-revm"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-precompiles.workspace = true
tempo-primitives.workspace = true
tempo-contracts.workspace = true
tempo-chainspec.workspace = true

reth-evm.workspace = true
reth-storage-api = { workspace = true, optional = true }
reth-rpc-eth-types = { workspace = true, optional = true }

revm.workspace = true

alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-sol-types.workspace = true

auto_impl.workspace = true
derive_more.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
eyre.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-eips.workspace = true
alloy-rlp.workspace = true
base64.workspace = true
p256.workspace = true
proptest.workspace = true
sha2.workspace = true
tempo-evm.workspace = true
tempo-precompiles = { workspace = true, features = ["test-utils"] }

[features]
reth = ["dep:reth-storage-api"]
rpc = ["dep:reth-rpc-eth-types"]
