[package]
name = "zone-rpc"
description = "Private zone RPC server — authenticated JSON-RPC with per-caller privacy redactions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# tempo
tempo-alloy = { workspace = true, features = ["tempo-compat"] }
tempo-contracts.workspace = true
tempo-primitives.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-types-eth.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true

# rpc server
axum = { workspace = true, features = ["ws"] }

# misc
eyre.workspace = true
futures.workspace = true
metrics.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
reth-metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2"

[dev-dependencies]
base64.workspace = true
p256.workspace = true
rand.workspace = true
sha2.workspace = true
tokio-tungstenite.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
