[package]
name = "tempo-zone-exex"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# reth - core infrastructure
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-tracing.workspace = true

# tempo - EVM with precompiles
tempo-evm.workspace = true
tempo-chainspec.workspace = true
tempo-precompiles.workspace = true
tempo-revm.workspace = true
tempo-primitives.workspace = true

# revm - for Context types
revm.workspace = true

# alloy - eips for base fee calculation
alloy-eips = { workspace = true }
alloy-evm = { workspace = true }

# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-sol-types.workspace = true

# async
tokio.workspace = true
futures-util = "0.3"

# misc
eyre.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
